--- a/requirements.txt
+++ b/requirements.txt
@@ -19,3 +19,29 @@ psycopg2-binary==2.9.9
 django-cors-headers==4.3.1
 djangorestframework==3.14.0
 python-dotenv==1.0.0
+asgiref==3.8.1
+certifi==2024.8.30
+charset-normalizer==3.3.2
+dj-database-url==2.2.0
+Django==4.2.11
+django-cors-headers==4.3.1
+django-jazzmin==3.0.0
+django-material==1.12.0
+django-widget-tweaks==1.5.0
+djangorestframework==3.14.0
+djangorestframework-simplejwt==5.3.1
+gunicorn==21.2.0
+idna==3.10
+packaging==24.1
+pillow==10.4.0
+psycopg2==2.9.9
+psycopg2-binary==2.9.9
+PyJWT==2.9.0
+python-dotenv==1.0.0
+pytz==2024.2
+requests==2.32.3
+six==1.16.0
+sqlparse==0.5.1
+typing_extensions==4.12.2
+urllib3==2.2.3
+whitenoise==6.6.0
